# atlas

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
apps/cli/: main.py
src/atlas/: __init__.py
src/atlas/analyzers/: __init__.py  rsi_momentum.py
src/atlas/assessment/: __init__.py  engine.py  models.py
src/atlas/contracts/: __init__.py  protocols.py
src/atlas/domain/: __init__.py
src/atlas/domain/shared/: __init__.py  models.py
src/atlas/indicators/: __init__.py  base.py  engine.py  registry.py  result.py  rsi.py
src/atlas/providers/: __init__.py  openbb_provider.py
src/atlas/shared/: __init__.py
tests/: test_assessment_engine.py  test_bootstrap.py  test_contracts.py  test_domain_models.py  test_indicators.py  test_openbb_provider.py  test_rsi_indicator.py  test_rsi_momentum_analyzer.py
