[project]
name = "atlas"
version = "0.1.0"
description = "Minimal MVP bootstrap for Atlas."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12,<1.0",
]

[project.scripts]
atlas = "apps.cli.main:app"

[dependency-groups]
dev = [
    "pre-commit>=3.7,<5.0",
    "pytest>=8.2,<9.0",
    "ruff>=0.5,<1.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
